fix hamburger background - add visibility

--- a/public/css/mapsPage.css
+++ b/public/css/mapsPage.css
@@ -3,6 +3,10 @@
   --dark-main-color: #686868;
 }
 
+html{
+  height: -webkit-fill-available;
+}
+
 body {
   padding: 0;
   margin: 0;
@@ -13,7 +17,9 @@ body {
 
 #map {
   min-height: calc(100vh - 70px);
+  max-height: calc(100vh - 70px);
   width: 100%;
+  height: -webkit-fill-available;
 }
 
 .top-header {
@@ -222,7 +228,7 @@ body {
   font-size: 24px;
   z-index: 1;
   pointer-events: none;
-
+  visibility: hidden;
 }
 
 .hamburger-bg-active {
@@ -231,6 +237,7 @@ body {
   transition: 0.8s ease;
   z-index: 3;
   pointer-events: all;
+  visibility: visible;
 
 }
 
@@ -609,10 +616,10 @@ body {
   font-weight: 700;
   text-align: center;
 }
-
+/*
 div.gmnoprint.gm-bundled-control.gm-bundled-control-on-bottom{
   bottom: 175px !important;
-}
+} */
 
 .logo-link:hover {
   color: var(--main-color);
