--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -78,9 +78,11 @@ nav {
   justify-content: space-evenly;
   cursor: pointer;
   z-index: 4;
+  /* mix-blend-mode: luminosity; */
 }
 
 .hamburger span {
+
   width: 100%;
   height: 10%;
   background: var(--main-color);
@@ -107,6 +109,8 @@ nav {
   -webkit-clip-path: circle(0px at 89% 9%);
   font-size: 24px;
   z-index: 1;
+  visibility: hidden;
+
 }
 
 .hamburger-bg-active {
@@ -114,6 +118,7 @@ nav {
   -webkit-clip-path: circle(150vh at 89% 9%);
   transition: 0.8s ease;
   z-index: 3;
+  visibility: visible;  
 }
 
 .hamburger-bg .logo {
@@ -616,7 +621,7 @@ input::placeholder {
   }
 
   .icons a:hover {
-    margin: 0px 7px;
+    color: var(--dark-main-color);
   }
 
 
